# zyntax

./: .env.markflow  Cargo.toml
archive/zyn_parser/: Cargo.toml
book/: README.md  (+9 more)
crates/compiler/: Cargo.toml
crates/compiler/benches/: simd_vectorization.rs
crates/compiler/src/: analysis.rs  associated_type_resolver.rs  async_support.rs  borrow_check.rs  bytecode.rs  cfg.rs  const_eval.rs  cranelift_backend.rs  effect_analysis.rs  effect_codegen.rs  effect_handler_resolution.rs  hir.rs  hir_builder.rs  hir_dump.rs  lib.rs  llvm_backend.rs  llvm_jit_backend.rs  lowering.rs  memory_management.rs  memory_optimization.rs  memory_pass.rs  monomorphize.rs  optimization.rs  pattern_matching.rs  profiling.rs  ssa.rs  tiered_backend.rs  trait_lowering.rs  typed_cfg.rs  vtable_registry.rs  zpack.rs  zrtl.rs
crates/compiler/src/runtime/: executor.rs  mod.rs  task.rs  waker.rs
crates/compiler/tests/: compilation_pipeline_tests.rs  const_generics_integration_test.rs  const_generics_simple_tests.rs  const_generics_tests.rs  continue_debug_test.rs  cranelift_backend_tests.rs  cranelift_backend_tests_new.rs  effect_compilation_tests.rs  end_to_end_comprehensive.rs  end_to_end_simple.rs  expression_lowering_tests.rs  extern_function_tests.rs  extern_lowering_integration_tests.rs  integration_basic_test.rs  integration_control_flow_test.rs  integration_data_structures_test.rs  llvm_backend_integration_tests.rs  memory_management_tests.rs  pattern_matching_tests.rs  result_type_tests.rs  trait_dispatch_simple_test.rs  type_resolution_tests.rs
crates/haxe_zyntax_runtime/: Cargo.toml
crates/haxe_zyntax_runtime/src/: lib.rs
crates/typed_ast/: Cargo.toml
crates/typed_ast/examples/: comprehensive_builder_demo.rs  create_test_json.rs  function_arguments_demo.rs  generics_demo.rs  golang_compatibility_analysis.rs  pattern_matching_demo.rs
crates/typed_ast/src/: advanced_analysis.rs  arena.rs  ast_convert.rs  const_evaluator.rs  constraint_solver.rs  dependent_types.rs  diagnostics.rs  effect_system.rs  error.rs  gradual_type_checker.rs  import_resolver.rs  lib.rs  linear_types.rs  multi_paradigm_checker.rs  nominal_type_checker.rs  smt_solver.rs  source.rs  structural_type_checker.rs  test_dsl.rs  type_checker.rs  type_inference.rs  type_registry.rs  typed_ast.rs  typed_builder.rs
crates/typed_ast/tests/: builtin_types_tests.rs  const_evaluator_tests.rs  const_generics_tests.rs  dependent_types_tests.rs  effect_system_integration_test.rs  effect_system_simple_test.rs  effect_system_tests.rs  extended_typed_ast_tests.rs  gradual_type_checker_tests.rs  higher_ranked_bounds_tests.rs  implicit_lifetime_test.rs  lifetime_inference_tests.rs  linear_types_tests.rs  multi_paradigm_integration_tests.rs  nominal_type_checker_basic_tests.rs  nominal_type_checker_tests.rs  static_lifetime_test.rs  trait_bounds_tests.rs  type_checker_tests.rs  type_registry_enhancements_test.rs
crates/whirlwind_adapter/: Cargo.toml
crates/whirlwind_adapter/src/: adapter.rs  error.rs  expression_converter.rs  lib.rs  statement_converter.rs  symbol_extractor.rs  type_converter.rs  typed_expression_converter.rs
crates/whirlwind_adapter/tests/: expression_tests.rs  fixture_tests.rs  integration_tests.rs  real_whirlwind_test.rs
crates/zyn_peg/: Cargo.toml
crates/zyn_peg/grammars/: zig.zyn
crates/zyn_peg/integration_test/: Cargo.toml
crates/zyn_peg/src/: ast.rs  generator.rs  lib.rs  runtime.rs
crates/zyn_peg/tests/: codegen_e2e_test.rs  imagepipe_grammar_tests.rs  zig_grammar_test.rs
crates/zynml/: Cargo.toml  ml.zyn
crates/zynml/examples/: collections.zynml  compute_simd.zynml  hello.zynml  hello_basic.zynml  neural_network.zynml  tensor_ops.zynml  test_01_println_string.zynml  test_02_println_int.zynml  test_03_println_float.zynml  test_04_let_binding.zynml  test_05_arithmetic.zynml  test_06_function_call.zynml  test_07_if_else.zynml  test_08_while_loop.zynml  test_08b_mutation.zynml  test_08c_while_simple.zynml  test_09_for_loop.zynml  test_10_fstring_simple.zynml  test_11_fstring_number.zynml  test_12_comparison.zynml  test_13_comparison_direct.zynml  test_arange_explicit.zynml  test_arange_simple.zynml  test_builtin.zynml  test_concat_direct.zynml  test_concat_minimal.zynml  test_concat_simple.zynml  test_empty_trait.zynml  test_eye_simple.zynml  test_fstring.zynml  test_println.zynml  test_simple_println.zynml  test_sum.zynml  test_tensor_import_only.zynml  test_trait_method.zynml  test_trait_parse.zynml  test_trait_self.zynml
crates/zynml/src/: lib.rs  main.rs
crates/zynml/stdlib/: prelude.zynml  tensor.zynml
crates/zynml/tests/: e2e_tests.rs
crates/zyntax_cli/: Cargo.toml  build.rs
crates/zyntax_cli/src/: cli.rs  commands.rs  main.rs
crates/zyntax_embed/: Cargo.toml
crates/zyntax_embed/src/: array.rs  convert.rs  error.rs  grammar2.rs  iterator.rs  lib.rs  runtime.rs  string.rs  value.rs
crates/zyntax_embed/tests/: async_runtime_tests.rs  cross_module_tests.rs
examples/imagepipe/: Cargo.toml
examples/imagepipe/src/: main.rs
plugins/: Cargo.toml
plugins/zrtl_audio/: Cargo.toml
plugins/zrtl_compress/: Cargo.toml
plugins/zrtl_crypto/: Cargo.toml
plugins/zrtl_effects/: Cargo.toml
plugins/zrtl_env/: Cargo.toml
plugins/zrtl_fs/: Cargo.toml
plugins/zrtl_http/: Cargo.toml
plugins/zrtl_image/: Cargo.toml
plugins/zrtl_io/: Cargo.toml
plugins/zrtl_io/src/: lib.rs
plugins/zrtl_json/: Cargo.toml
plugins/zrtl_math/: Cargo.toml
plugins/zrtl_model/: Cargo.toml
plugins/zrtl_net/: Cargo.toml
plugins/zrtl_paint/: Cargo.toml
plugins/zrtl_process/: Cargo.toml
plugins/zrtl_regex/: Cargo.toml
plugins/zrtl_sdl/: Cargo.toml
plugins/zrtl_simd/: Cargo.toml
plugins/zrtl_sql/: Cargo.toml
plugins/zrtl_string/: Cargo.toml
plugins/zrtl_svg/: Cargo.toml
plugins/zrtl_tensor/: Cargo.toml
plugins/zrtl_tensor/src/: lib.rs
plugins/zrtl_text/: Cargo.toml
plugins/zrtl_thread/: Cargo.toml
plugins/zrtl_time/: Cargo.toml
plugins/zrtl_vector/: Cargo.toml
plugins/zrtl_websocket/: Cargo.toml
plugins/zrtl_window/: Cargo.toml
plugins/zrtl_xml/: Cargo.toml
(+53 files in other folders)
