[workspace]
resolver = "2"
members = [
    "zrtl_io",
    "zrtl_fs",
    "zrtl_thread",
    "zrtl_net",
    "zrtl_time",
    "zrtl_env",
    "zrtl_math",
    "zrtl_string",
    "zrtl_json",
    "zrtl_regex",
    "zrtl_process",
    "zrtl_crypto",
    "zrtl_http",
    "zrtl_compress",
    "zrtl_sql",
    "zrtl_websocket",
    "zrtl_window",
    "zrtl_image",
    "zrtl_xml",
    "zrtl_paint",
    "zrtl_svg",
    "zrtl_sdl",
    "zrtl_simd",
    "zrtl_tensor",
    "zrtl_vector",
    "zrtl_audio",
    "zrtl_text",
    "zrtl_model",
    "zrtl_effects",
]

[workspace.dependencies]
# Core ZRTL types
zrtl = { path = "../sdk/zrtl" }

# Common dependencies
thiserror = "2.0"
log = "0.4"

[lints]
workspace = true
