[package]
name = "zyn_parser"
version = "0.1.0"
edition = "2021"
authors = ["Zyntax Contributors"]
description = "PEG-based parser generator for Zyntax TypedAST frontends"
license = "Apache-2.0"

[dependencies]
# PEG parser generator
pest = "2.7"
pest_derive = "2.7"

# Zyntax core dependencies
zyntax_typed_ast = { path = "../typed_ast" }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
# Testing
criterion = "0.5"
zyntax_compiler = { path = "../compiler" }

# Benchmarks will be added in Phase 2
# [[bench]]
# name = "parser_benchmarks"
# harness = false

[lints]
workspace = true
