[package]
name = "zyntax_compiler"
version = "0.1.0"
edition = "2021"
authors = ["Damilare Akinlaja"]
description = "Layered compilation system for Zyntax language"

[dependencies]
# Parser dependency
zyntax_typed_ast = { path = "../typed_ast", features = ["operator_traits"] }

# Core data structures
dashmap = { workspace = true }
parking_lot = { workspace = true }
crossbeam = { workspace = true }

# Analysis and optimization
petgraph = "0.6.4"  # Graph algorithms
smallvec = "1.13.2"  # Optimized small vectors
indexmap = { version = "2.2.6", features = ["serde"] }  # Ordered maps with serde support
bit-set = "0.5.3"  # Bit sets for liveness analysis

# Serialization for caching
serde = { workspace = true }
serde_json = { workspace = true }
bincode = "1.3.3"  # Fast binary serialization
postcard = { version = "1.0", features = ["alloc"] }  # Compact binary format for bytecode
crc32fast = "1.4"  # CRC32 checksums for bytecode validation

# Error handling
thiserror = { workspace = true }
miette = "7.2.0"

# Logging
log = "0.4"

# Utilities
uuid = { workspace = true }
tempfile = { workspace = true }
rayon = { workspace = true }
fnv = "1.0.7"  # Fast hash function

# Dynamic library loading for ZRTL plugins
libloading = "0.8"

# Lazy initialization for global state
once_cell = "1.19"

# Archive format for ZPack
zip = "2.2"

# Optional features for backend support
cranelift = { version = "0.106", optional = true }
cranelift-codegen = { version = "0.106", optional = true }
cranelift-frontend = { version = "0.106", optional = true }
cranelift-jit = { version = "0.106", optional = true }
cranelift-module = { version = "0.106", optional = true }
cranelift-native = { version = "0.106", optional = true }
inkwell = { version = "0.7.1", features = ["llvm21-1"], optional = true }  # LLVM bindings

[dev-dependencies]
env_logger = "0.11"
criterion = "0.5"

[[bench]]
name = "simd_vectorization"
harness = false

[features]
default = ["cranelift-backend"]
cranelift-backend = ["cranelift", "cranelift-codegen", "cranelift-frontend", "cranelift-jit", "cranelift-module", "cranelift-native"]
llvm-backend = ["inkwell"]
all-backends = ["cranelift-backend", "llvm-backend"]
