[package]
name = "haxe_zyntax_runtime"
version = "0.1.0"
edition = "2021"
description = "Haxe-specific runtime for Zyntax compiler"

[lib]
# cdylib: Dynamic library for runtime loading (.so/.dylib/.dll)
# rlib: Rust library for static linking within Rust
# staticlib: C-compatible static library (.a) for AOT linking
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
libc = "0.2"
zyntax_compiler = { path = "../compiler" }
zyntax_plugin_macros = { path = "../zyntax_plugin_macros" }
inventory = "0.3"

[lints]
workspace = true
