[package]
name = "zyntax_typed_ast"
version = "0.3.0"
edition = "2021"
authors = ["Damilare Akinlaja"]
description = "TypedAST - Common typed intermediate representation for multiple languages"

[dependencies]
# Error handling and diagnostics
thiserror = { workspace = true }
miette = { workspace = true }

# Basic utilities
serde = { workspace = true }
serde_json = "1.0"
uuid = { workspace = true }
bincode = "1.3"

# Memory management
typed-arena = { workspace = true }
string-interner = { workspace = true }
once_cell = "1.19"

# Optional features
derive_builder = { version = "0.20.2", optional = true }

[features]
default = []
builders = ["derive_builder"]  # Enable builder pattern helpers
operator_traits = []  # Enable built-in operator traits (Add, Sub, Mul, etc.)


[[example]]
name = "generics_demo"
path = "examples/generics_demo.rs"
[lints]
workspace = true
