[package]
name = "whirlwind_adapter"
version = "0.1.0"
edition = "2021"

[dependencies]
# Zyntax TypedAST - our target IR
zyntax_typed_ast = { path = "../typed_ast" }

# Whirlwind compiler dependencies
whirlwind_analyzer = { git = "https://github.com/adebola-io/whirlwind", package = "analyzer" }
whirlwind_ast = { git = "https://github.com/adebola-io/whirlwind", package = "ast" }
whirlwind_parser = { git = "https://github.com/adebola-io/whirlwind", package = "parser" }
whirlwind_lexer = { git = "https://github.com/adebola-io/whirlwind", package = "lexer" }

# Utilities
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
# For testing
pretty_assertions = "1.4"

[lints]
workspace = true
