[package]
name = "zyn_peg"
version = "0.1.0"
edition = "2021"
description = "ZynPEG: Parser generator for multi-language Zyntax frontends"
authors = ["Zyntax Team"]
license = "Apache-2.0"

[dependencies]
# PEG parsing (we use pest to parse .zyn grammars)
pest = "2.7"
pest_derive = "2.7"

# Code generation
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing"] }

# Error handling
thiserror = "1.0"

# Logging
log = "0.4"

# Serialization (for zpeg runtime format)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Regex for pattern processing
regex = "1.10"

# Interned strings (shared with typed_ast)
internment = "0.8"

# TypedAST builder for runtime AST construction
zyntax_typed_ast = { path = "../typed_ast", package = "zyntax_typed_ast" }

[dev-dependencies]
# Testing
pretty_assertions = "1.4"
regex = "1.10"
# Dynamic grammar loading for runtime tests
pest_vm = "2.8"
pest_meta = "2.8"

[lints]
workspace = true
