[package]
name = "zyntax_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zyntax"
path = "src/main.rs"

[dependencies]
zyntax_typed_ast = { path = "../typed_ast" }
zyntax_compiler = { path = "../compiler", features = ["cranelift-backend"] }
zyntax_embed = { path = "../zyntax_embed" }
zyn_peg = { path = "../zyn_peg" }
pest = "2.7"
pest_derive = "2.7"
pest_vm = "2.8"
pest_meta = "2.8"

# Runtime symbols are loaded from ZPack archives - not compiled directly into CLI
# This keeps the compiler frontend-agnostic:
# - JIT mode: Loads .zrtl (dynamic library) from zpack for runtime symbol lookup
# - AOT mode: Extracts .a (static library) from zpack for linker symbol resolution
#
# Example: zyntax compile --pack haxe-runtime.zpack --source main.hx

# CLI
clap = { version = "4.5", features = ["derive"] }
colored = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
miette = { workspace = true }

# File I/O
glob = "0.3"
walkdir = "2.5"
zip = "2.2"

# Logging
env_logger = "0.11"
log = "0.4"

# REPL
rustyline = "14.0"
dirs = "5.0"

# LLVM backend (optional)
inkwell = { version = "0.7.1", features = ["llvm21-1"], optional = true }

[features]
default = []
llvm-backend = ["zyntax_compiler/llvm-backend", "inkwell"]
all-backends = ["llvm-backend"]

[lints]
workspace = true
