[package]
name = "zyntax_embed"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for embedding Zyntax as a JIT runtime with bidirectional value interop"
license = "Apache-2.0"
repository = "https://github.com/darmie/zyntax"
keywords = ["compiler", "jit", "runtime", "embedding", "interop"]
categories = ["compilers", "development-tools"]

[dependencies]
zyntax_compiler = { path = "../compiler" }
zyn_peg = { path = "../zyn_peg" }
zyntax_typed_ast = { path = "../typed_ast" }
thiserror = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = "2.0"

# Dynamic grammar parsing at runtime
pest = "2.7"
pest_meta = "2.8"
pest_vm = "2.8"

[dev-dependencies]

[features]
default = []
llvm-backend = ["zyntax_compiler/llvm-backend"]
all-backends = ["zyntax_compiler/all-backends", "llvm-backend"]
