[package]
name = "imagepipe-example"
version = "0.1.0"
edition = "2021"
description = "Example: Image Processing Pipeline DSL built with Zyntax"

[[bin]]
name = "imagepipe"
path = "src/main.rs"

[dependencies]
# Zyntax embedding SDK
zyntax_embed = { path = "../../crates/zyntax_embed" }
zyntax_typed_ast = { path = "../../crates/typed_ast" }

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Error handling
anyhow = "1.0"

# JSON parsing for AST tree display
serde_json = "1.0"

[lints]
workspace = true
