[package]
name = "zrtl_compress"
version = "0.1.0"
edition = "2021"
description = "ZRTL Compress plugin - gzip, zlib, and deflate compression"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
zrtl = { path = "../../sdk/zrtl" }
flate2 = "1.0"

[lints]
workspace = true
