[package]
name = "zrtl_http"
version = "0.1.0"
edition = "2021"
description = "ZRTL HTTP plugin - HTTP client for GET/POST/etc requests"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
zrtl = { path = "../../sdk/zrtl" }
ureq = { version = "2.12", features = ["json"] }
lazy_static = "1.5"

[lints]
workspace = true
