[package]
name = "zrtl_image"
version = "0.1.0"
edition = "2021"
description = "ZRTL Image plugin - image encoding/decoding for common formats"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
zrtl = { path = "../../sdk/zrtl" }
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp", "ico", "tiff"] }

[lints]
workspace = true
