[package]
name = "zrtl_json"
version = "0.1.0"
edition = "2021"
description = "ZRTL JSON plugin - JSON parsing and serialization"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
zrtl = { path = "../../sdk/zrtl" }
serde_json = "1.0"

[lints]
workspace = true
