[package]
name = "zrtl_regex"
version = "0.1.0"
edition = "2021"
description = "ZRTL Regex plugin - regular expression matching and replacement"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
zrtl = { path = "../../sdk/zrtl" }
regex = "1.10"

[lints]
workspace = true
