[package]
name = "zrtl_sdl"
version = "0.1.0"
edition = "2021"
description = "ZRTL SDL plugin - SDL2 window, surface, and texture support"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
zrtl = { path = "../../sdk/zrtl" }
sdl2 = { version = "0.36", features = ["bundled"] }

[lints]
workspace = true
