[package]
name = "zrtl_sql"
version = "0.1.0"
edition = "2021"
description = "ZRTL SQL plugin - SQLite database operations"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
zrtl = { path = "../../sdk/zrtl" }
rusqlite = { version = "0.32", features = ["bundled"] }
lazy_static = "1.5"

[lints]
workspace = true
