[package]
name = "zrtl_vector"
version = "0.1.0"
edition = "2021"
description = "Vector search and embedding operations for Zyntax runtime (ZynML)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# ZRTL SDK for plugin macro
zrtl = { path = "../../sdk/zrtl" }

# SIMD operations for high-performance compute
zrtl_simd = { path = "../zrtl_simd" }

# Parallel processing for batch operations
rayon = "1.10"

[lints]
workspace = true
